<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/tv_label_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rv_scanned_list_item_padding"
            android:layout_marginTop="@dimen/rv_scanned_list_item_btn_margin"
            android:text="@string/label_result"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_label_send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rv_scanned_list_item_padding"
            android:layout_marginTop="@dimen/rv_scanned_list_item_btn_margin"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_label_send"
            app:layout_constraintStart_toEndOf="@id/tv_label_result"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/label_result" />

        <TextView
            android:id="@+id/tv_label_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rv_scanned_list_item_padding"
            android:text="@string/label_send"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_send"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_result" />

        <TextView
            android:id="@+id/tv_send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/send_resp_height"
            android:layout_marginHorizontal="@dimen/rv_scanned_list_item_padding"
            android:background="@color/grey_FFCCCCCC"
            android:text="Hello World!"
            app:layout_constraintBottom_toTopOf="@id/tv_label_resp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_send" />

        <TextView
            android:id="@+id/tv_label_resp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/rv_scanned_list_item_padding"
            android:text="@string/label_resp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/tv_resp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_send" />

        <TextView
            android:id="@+id/tv_resp"
            android:layout_width="match_parent"
            android:layout_height="@dimen/send_resp_height"
            android:layout_marginHorizontal="@dimen/rv_scanned_list_item_padding"
            android:background="@color/grey_FFCCCCCC"
            android:text="Hello World!"
            app:layout_constraintBottom_toTopOf="@id/btn_scan"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_label_resp" />

        <Button
            android:id="@+id/btn_scan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/rv_scanned_list_item_padding"
            android:text="@string/btn_scan"
            app:layout_constraintBottom_toTopOf="@id/rv_devices"
            app:layout_constraintEnd_toStartOf="@id/btn_send"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_resp" />

        <Button
            android:id="@+id/btn_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/rv_scanned_list_item_padding"
            android:text="@string/btn_send"
            app:layout_constraintBottom_toTopOf="@id/rv_devices"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_scan"
            app:layout_constraintTop_toBottomOf="@id/tv_resp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_devices"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_scan"
            tools:itemCount="10"
            tools:listitem="@layout/rv_scanned_list_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
